<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_unshort">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_unshorten_urls"
            android:title="@string/pref_unshorten_urls_title"
            android:summary="@string/pref_unshorten_urls_summary" />

        <ListPreference
            android:key="pref_toast_type"
            android:title="@string/pref_toast_type_title"
            android:summary="@string/pref_toast_type_summary"
            android:dialogTitle="@string/pref_toast_type_title"
            android:defaultValue="2"
            android:entries="@array/toast_type_entries"
            android:entryValues="@array/toast_type_values"
            android:dependency="pref_unshorten_urls" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_confirm_open"
            android:title="@string/pref_confirm_open_title"
            android:summary="@string/pref_confirm_open_summary"
            android:dependency="pref_unshorten_urls" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_use_long_url"
            android:title="@string/pref_use_long_url_title"
            android:summary="@string/pref_use_long_url_summary"
            android:dependency="pref_unshorten_urls" />

        <ListPreference
            android:defaultValue="ALWAYS"
            android:key="pref_resolve_all_when"
            android:entries="@array/resolve_all_entries"
            android:entryValues="@array/resolve_all_values"
            android:title="@string/pref_resolve_all_title"
            android:summary="@string/pref_resolve_all_summary"
            android:dependency="pref_unshorten_urls" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_about">

        <Preference
            android:key="pref_support"
            android:title="@string/pref_support_title"
            android:summary="@string/pref_support_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/showthread.php?t=2603868" />
        </Preference>

        <Preference
            android:title="@string/pref_xposed_title"
            android:summary="@string/pref_xposed_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/showthread.php?t=1574401" />
        </Preference>

        <Preference
            android:title="@string/pref_jsoup_title"
            android:summary="@string/pref_jsoup_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://jsoup.org/" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_other">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_app_icon"
            android:title="@string/pref_show_app_icon_title"
            android:summary="@string/pref_show_app_icon_summary" />

        <Preference
            android:title="@string/pref_submit_title"
            android:summary="@string/pref_submit_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://docs.google.com/forms/d/1R_jgpNa_uDPB9NVSnKa3dlDLQF2bWDnjJL1RI9kheYM/viewform?usp=send_form" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>